--- a/index.html
+++ b/index.html
@@ -1,22 +1,91 @@
+<!-- EduQuest: Mobile-Responsive Frontend with AI and File Upload -->
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8">
-    <title>EduQuest</title>
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-        text-align: center;
-        padding: 50px;
-        background: #f0f8ff;
-      }
-      h1 {
-        color: #2e8b57;
-      }
-    </style>
-  </head>
-  <body>
-    <h1>Welcome to EduQuest!</h1>
-    <p>Your adventure in learning begins here.</p>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>EduQuest AI</title>
+  <style>
+    body { font-family: Arial, sans-serif; margin: 0; background: #f4f4f4; }
+    header { background: #007bff; color: white; padding: 1rem; text-align: center; }
+    main { padding: 1rem; max-width: 600px; margin: auto; }
+    .section { background: white; padding: 1rem; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1); margin-bottom: 1rem; }
+    textarea, input[type="file"], button {
+      width: 100%; padding: 0.75rem; margin-top: 0.5rem;
+      border-radius: 5px; border: 1px solid #ccc;
+    }
+    button {
+      background: #007bff; color: white; font-weight: bold; cursor: pointer;
+    }
+    .response { margin-top: 1rem; background: #e9ecef; padding: 0.75rem; border-radius: 5px; white-space: pre-wrap; }
+    ul { list-style: none; padding: 0; }
+    li { margin: 0.5rem 0; }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>EduQuest - AI Learning Assistant</h1>
+  </header>
+
+  <main>
+    <div class="section">
+      <h2>Ask a Question</h2>
+      <textarea id="questionInput" rows="3" placeholder="Ask anything..."></textarea>
+      <button onclick="askQuestion()">Ask AI</button>
+      <div id="response" class="response"></div>
+    </div>
+
+    <div class="section">
+      <h2>Upload Notes</h2>
+      <input type="file" id="fileInput" />
+      <button onclick="uploadFile()">Upload File</button>
+    </div>
+
+    <div class="section">
+      <h2>Uploaded Files</h2>
+      <ul id="fileList"></ul>
+    </div>
+  </main>
+
+  <script>
+    async function askQuestion() {
+      const question = document.getElementById('questionInput').value;
+      const responseDiv = document.getElementById('response');
+      responseDiv.textContent = 'Thinking...';
+      const res = await fetch('http://localhost:3000/ask', {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({ question })
+      });
+      const data = await res.json();
+      responseDiv.textContent = data.answer;
+    }
+
+    async function uploadFile() {
+      const fileInput = document.getElementById('fileInput');
+      const file = fileInput.files[0];
+      if (!file) return alert('Please select a file');
+      const formData = new FormData();
+      formData.append('file', file);
+
+      await fetch('http://localhost:3000/upload', { method: 'POST', body: formData });
+      loadFiles();
+      fileInput.value = '';
+    }
+
+    async function loadFiles() {
+      const res = await fetch('http://localhost:3000/files');
+      const files = await res.json();
+      const fileList = document.getElementById('fileList');
+      fileList.innerHTML = '';
+      files.forEach(file => {
+        const li = document.createElement('li');
+        li.innerHTML = `<a href="http://localhost:3000/uploads/${file}" target="_blank">${file}</a>`;
+        fileList.appendChild(li);
+      });
+    }
+
+    window.onload = loadFiles;
+  </script>
+</body>
 </html>
